# ArtiResidual

./: .gitattributes  .gitignore  CLAUDE.md  CODE_INDEX.md  DECISIONS.md  PROGRESS.md  PROJECT_CONTEXT.md  README.md  TEST.md  analytical_flow.py  artiresidual_dit_architecture.html  artiresidual_tech_spec.md  pyproject.toml  setup_server.sh
artiresidual/: __init__.py
artiresidual/data/: README.md  __init__.py  benchmark.py  demo_gen.py  perturb.py
artiresidual/evaluation/: __init__.py  eval_real.py  eval_sim.py  failure_analysis.py
artiresidual/perception/: __init__.py  flow_predictor.py  prior_estimator.py
artiresidual/policy/: __init__.py  diffusion.py  dit_blocks.py  dit_policy.py
artiresidual/refiner/: __init__.py  affordance_utils.py  analytical_flow.py  imm_filter.py  state_estimator.py
artiresidual/selector/: __init__.py  role_selector.py
artiresidual/training/: __init__.py  datasets.py  train_joint.py  train_policy.py  train_refiner.py
artiresidual/utils/: __init__.py  geometry.py  part_tracker.py  visualization.py
configs/: base.yaml  refiner_stage1.yaml
configs/policy/: dit_50m.yaml  dit_lora_rdt.yaml
configs/refiner/: imm_k2_minimum.yaml  imm_k3.yaml
configs/task/: multi_handle.yaml  single_handle.yaml
docs/: PIPELINE_v3.html
scripts/: e2e_test_state_estimator.py  gen_demos.py  run_baselines.sh  run_tests.sh  setup_robotwin.sh  setup_sam2.sh  smoke_test_imm_init.sh  smoke_test_imm_pipeline.sh  smoke_test_part_tracker.py  smoke_test_train_refiner.py  smoke_test_train_refiner.sh  visualize_analytical_flow.py  visualize_imm_step.py  visualize_part_tracker.py  visualize_state_estimator.py
tests/: conftest.py  test_analytical_flow.py  test_benchmark.py  test_imm_filter.py  test_state_estimator.py
